include/Tilengine.h

		#define TLNAPI __declspec(dllexport)
		#define TLNAPI __declspec(dllimport)
		typedef short			int16_t;	/*!< signed 16-bit wide data */
		typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
		typedef unsigned short	uint16_t;	/*!< unsigned 16-bit wide data */
		typedef unsigned int	uint32_t;	/*!< unsigned 32-bit wide data */
		typedef unsigned char bool;		/*!< C++ bool type for C language */
		#define TLNAPI __attribute__((visibility("default")))
		#define TLNAPI
/*!
 * layer blend modes. Must be one of these and are mutually exclusive:
 */
typedef enum
{
	BLEND_NONE,		/*!< blending disabled */
	BLEND_MIX25,	/*!< color averaging 1 */
	BLEND_MIX50,	/*!< color averaging 2 */
	BLEND_MIX75,	/*!< color averaging 3 */
	BLEND_ADD,		/*!< color is always brighter (simulate light effects) */
	BLEND_SUB,		/*!< color is always darker (simulate shadow effects) */
	BLEND_MOD,		/*!< color is always darker (simulate shadow effects) */
	BLEND_OR,		/*!< Logical OR */
	BLEND_XOR,		/*!< Logical XOR */
	BLEND_NOR,		/*!< Logical NOR */
	BLEND_AND,		/*!< Logical AND */
	BLEND_NAND,		/*!< Logical NAND */
	BLEND_CUSTOM,	/*!< user provided blend function with TLN_SetCustomBlendFunction() */
	MAX_BLEND,
	BLEND_MIX = BLEND_MIX50
}
TLN_Blend;
/*!
 * layer type retrieved by \ref TLN_GetLayerType
 */
typedef enum
{
	LAYER_NONE,		/*!< undefined */
	LAYER_TILE,		/*!< tilemap-based layer */
	LAYER_OBJECT,	/*!< objects layer */
	LAYER_BITMAP,	/*!< bitmapped layer */
}
TLN_LayerType;
/*! Affine transformation parameters */
typedef struct
{
	float angle;	/*!< rotation in degrees */
	float dx;		/*!< horizontal translation */
	float dy;		/*!< vertical translation */
	float sx;		/*!< horizontal scaling */
	float sy;		/*!< vertical scaling */
}
TLN_Affine;
/*! Tile item for Tilemap access methods */
typedef union Tile
{
	uint32_t value;
	struct
	{
		uint16_t index;		/*!< tile index */
		uint16_t flags;		/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	};
}
Tile;
/*! Tile information returned by TLN_GetLayerTile() */
typedef struct
{
	uint16_t index;	/*!< tile index */
	uint16_t flags;	/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	int row;		/*!< row number in the tilemap */
	int col;		/*!< col number in the tilemap */
	int xoffset;	/*!< horizontal position inside the title */
	int yoffset;	/*!< vertical position inside the title */
	uint8_t color;	/*!< color index at collision point */
	uint8_t type;	/*!< tile type */
	bool empty;		/*!< cell is empty*/
}
TLN_TileInfo;
/*! Object item info returned by TLN_GetObjectInfo() */
typedef struct
{
	uint16_t id;	/*!< unique ID */
	uint16_t gid;	/*!< graphic ID (tile index) */
	uint16_t flags;	/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
	int x;			/*!< horizontal position */
	int y;			/*!< vertical position */
	int width;		/*!< horizontal size */
	int height;		/*!< vertical size */
	uint8_t type;	/*!< type property */
	bool visible;	/*!< visible property */
	char name[64];	/*!< name property */
}
TLN_ObjectInfo;
/*! pixel mapping for TLN_SetLayerPixelMapping() */
typedef struct
{
	int16_t dx;		/*! horizontal pixel displacement */
	int16_t dy;		/*! vertical pixel displacement */
}
TLN_PixelMap;
typedef union  Tile*		 TLN_Tile;				/*!< Tile reference */
typedef struct Tileset*		 TLN_Tileset;			/*!< Opaque tileset reference */
typedef struct Tilemap*		 TLN_Tilemap;			/*!< Opaque tilemap reference */
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Spriteset*	 TLN_Spriteset;			/*!< Opaque sspriteset reference */
typedef struct Bitmap*		 TLN_Bitmap;			/*!< Opaque bitmap reference */
typedef struct ObjectList*	 TLN_ObjectList;		/*!< Opaque object list reference */
/**@}*/

/**
 * \defgroup tilemap
 * \brief Tilemap resources management for background layers 
* @{ */
TLNAPI TLN_Tilemap TLN_CreateTilemap (int rows, int cols, TLN_Tile tiles, uint32_t bgcolor, TLN_Tileset tileset);
TLNAPI TLN_Tilemap TLN_LoadTilemap (const char* filename, const char* layername);
TLNAPI TLN_Tilemap TLN_CloneTilemap (TLN_Tilemap src);
TLNAPI int TLN_GetTilemapRows (TLN_Tilemap tilemap);
TLNAPI int TLN_GetTilemapCols (TLN_Tilemap tilemap);
TLNAPI TLN_Tileset TLN_GetTilemapTileset (TLN_Tilemap tilemap);
TLNAPI bool TLN_GetTilemapTile (TLN_Tilemap tilemap, int row, int col, TLN_Tile tile);
TLNAPI bool TLN_SetTilemapTile (TLN_Tilemap tilemap, int row, int col, TLN_Tile tile);
TLNAPI bool TLN_CopyTiles (TLN_Tilemap src, int srcrow, int srccol, int rows, int cols, TLN_Tilemap dst, int dstrow, int dstcol);
TLNAPI bool TLN_DeleteTilemap (TLN_Tilemap tilemap);
/**@}*/

/**
 * \defgroup palette
 * \brief Color palette resources management for sprites and background layers
* @{ */
TLNAPI TLN_Palette TLN_CreatePalette (int entries);
TLNAPI TLN_Palette TLN_LoadPalette (const char* filename);
TLNAPI TLN_Palette TLN_ClonePalette (TLN_Palette src);
TLNAPI bool TLN_SetPaletteColor (TLN_Palette palette, int color, uint8_t r, uint8_t g, uint8_t b);
TLNAPI bool TLN_MixPalettes (TLN_Palette src1, TLN_Palette src2, TLN_Palette dst, uint8_t factor);
TLNAPI bool TLN_AddPaletteColor (TLN_Palette palette, uint8_t r, uint8_t g, uint8_t b, uint8_t start, uint8_t num);
TLNAPI bool TLN_SubPaletteColor (TLN_Palette palette, uint8_t r, uint8_t g, uint8_t b, uint8_t start, uint8_t num);
TLNAPI bool TLN_ModPaletteColor (TLN_Palette palette, uint8_t r, uint8_t g, uint8_t b, uint8_t start, uint8_t num);
TLNAPI uint8_t* TLN_GetPaletteData (TLN_Palette palette, int index);
TLNAPI bool TLN_DeletePalette (TLN_Palette palette);
/**@}*/

/**
 * \defgroup bitmap
 * \brief Bitmap management
* @{ */
TLNAPI TLN_Bitmap TLN_CreateBitmap (int width, int height, int bpp);
TLNAPI TLN_Bitmap TLN_LoadBitmap (const char* filename);
TLNAPI TLN_Bitmap TLN_CloneBitmap (TLN_Bitmap src);
TLNAPI uint8_t* TLN_GetBitmapPtr (TLN_Bitmap bitmap, int x, int y);
TLNAPI int TLN_GetBitmapWidth (TLN_Bitmap bitmap);
TLNAPI int TLN_GetBitmapHeight (TLN_Bitmap bitmap);
TLNAPI int TLN_GetBitmapDepth (TLN_Bitmap bitmap);
TLNAPI int TLN_GetBitmapPitch (TLN_Bitmap bitmap);
TLNAPI TLN_Palette TLN_GetBitmapPalette (TLN_Bitmap bitmap);
TLNAPI bool TLN_SetBitmapPalette (TLN_Bitmap bitmap, TLN_Palette palette);
TLNAPI bool TLN_DeleteBitmap (TLN_Bitmap bitmap);
/**@}*/

/**
 * \defgroup objects
 * \brief ObjectList resources management
 * @{ */
TLNAPI TLN_ObjectList TLN_CreateObjectList(void);
TLNAPI bool TLN_AddTileObjectToList(TLN_ObjectList list, uint16_t id, uint16_t gid, uint16_t flags, int x, int y);
TLNAPI TLN_ObjectList TLN_LoadObjectList(const char* filename, const char* layername);
TLNAPI TLN_ObjectList TLN_CloneObjectList(TLN_ObjectList src);
TLNAPI int TLN_GetListNumObjects(TLN_ObjectList list);
TLNAPI bool TLN_GetListObject(TLN_ObjectList list, TLN_ObjectInfo* info);
TLNAPI bool TLN_DeleteObjectList(TLN_ObjectList list);
/**@}*/

/**
 * \defgroup layer
 * \brief Background layers management
* @{ */
TLNAPI bool TLN_SetLayer (int nlayer, TLN_Tileset tileset, TLN_Tilemap tilemap);
TLNAPI bool TLN_SetLayerTilemap(int nlayer, TLN_Tilemap tilemap);
TLNAPI bool TLN_SetLayerBitmap(int nlayer, TLN_Bitmap bitmap);
TLNAPI bool TLN_SetLayerPalette (int nlayer, TLN_Palette palette);
TLNAPI bool TLN_SetLayerPosition (int nlayer, int hstart, int vstart);
TLNAPI bool TLN_SetLayerScaling (int nlayer, float xfactor, float yfactor);
TLNAPI bool TLN_SetLayerAffineTransform (int nlayer, TLN_Affine *affine);
TLNAPI bool TLN_SetLayerTransform (int layer, float angle, float dx, float dy, float sx, float sy);
TLNAPI bool TLN_SetLayerPixelMapping (int nlayer, TLN_PixelMap* table);
TLNAPI bool TLN_SetLayerBlendMode (int nlayer, TLN_Blend mode, uint8_t factor);
TLNAPI bool TLN_SetLayerColumnOffset (int nlayer, int* offset);
TLNAPI bool TLN_SetLayerClip (int nlayer, int x1, int y1, int x2, int y2);
TLNAPI bool TLN_DisableLayerClip (int nlayer);
TLNAPI bool TLN_SetLayerMosaic (int nlayer, int width, int height);
TLNAPI bool TLN_DisableLayerMosaic (int nlayer);
TLNAPI bool TLN_ResetLayerMode (int nlayer);
TLNAPI bool TLN_SetLayerObjects(int nlayer, TLN_ObjectList objects, TLN_Tileset tileset);
TLNAPI bool TLN_SetLayerPriority(int nlayer, bool enable);
TLNAPI bool TLN_SetLayerParent(int nlayer, int parent);
TLNAPI bool TLN_DisableLayerParent(int nlayer);
TLNAPI bool TLN_DisableLayer (int nlayer);
TLNAPI bool TLN_EnableLayer(int nlayer);
TLNAPI TLN_LayerType TLN_GetLayerType(int nlayer);
TLNAPI TLN_Palette TLN_GetLayerPalette (int nlayer);
TLNAPI TLN_Tileset TLN_GetLayerTileset(int nlayer);
TLNAPI TLN_Tilemap TLN_GetLayerTilemap(int nlayer);
TLNAPI TLN_Bitmap TLN_GetLayerBitmap(int nlayer);
TLNAPI TLN_ObjectList TLN_GetLayerObjects(int nlayer);
TLNAPI bool TLN_GetLayerTile (int nlayer, int x, int y, TLN_TileInfo* info);
TLNAPI int  TLN_GetLayerWidth (int nlayer);
TLNAPI int  TLN_GetLayerHeight (int nlayer);
/**@}*/

/**
 * \defgroup sprite
 * \brief Sprites management
* @{ */
TLNAPI bool TLN_ConfigSprite (int nsprite, TLN_Spriteset spriteset, uint32_t flags);
TLNAPI bool TLN_SetSpriteSet (int nsprite, TLN_Spriteset spriteset);
TLNAPI bool TLN_SetSpriteFlags (int nsprite, uint32_t flags);
TLNAPI bool TLN_EnableSpriteFlag(int nsprite, uint32_t flag, bool enable);
TLNAPI bool TLN_SetSpritePivot(int nsprite, float px, float py);
TLNAPI bool TLN_SetSpritePosition(int nsprite, int x, int y);
TLNAPI bool TLN_SetSpritePicture (int nsprite, int entry);
TLNAPI bool TLN_SetSpritePalette (int nsprite, TLN_Palette palette);
TLNAPI bool TLN_SetSpriteBlendMode (int nsprite, TLN_Blend mode, uint8_t factor);
TLNAPI bool TLN_SetSpriteScaling (int nsprite, float sx, float sy);
TLNAPI bool TLN_ResetSpriteScaling (int nsprite);