include/Tilengine.nim


proc TLN_CreateTilemap*(rows: cint; cols: cint; tiles: TLN_Tile; bgcolor: uint32_t;
                       tileset: TLN_Tileset): TLN_Tilemap {.
    importc: "TLN_CreateTilemap", header: "Tilengine.h".}
proc TLN_LoadTilemap*(filename: cstring; layername: cstring): TLN_Tilemap {.
    importc: "TLN_LoadTilemap", header: "Tilengine.h".}
proc TLN_CloneTilemap*(src: TLN_Tilemap): TLN_Tilemap {.importc: "TLN_CloneTilemap",
    header: "Tilengine.h".}
proc TLN_GetTilemapRows*(tilemap: TLN_Tilemap): cint {.
    importc: "TLN_GetTilemapRows", header: "Tilengine.h".}
proc TLN_GetTilemapCols*(tilemap: TLN_Tilemap): cint {.
    importc: "TLN_GetTilemapCols", header: "Tilengine.h".}
proc TLN_GetTilemapTileset*(tilemap: TLN_Tilemap): TLN_Tileset {.
    importc: "TLN_GetTilemapTileset", header: "Tilengine.h".}
proc TLN_GetTilemapTile*(tilemap: TLN_Tilemap; row: cint; col: cint; tile: TLN_Tile): bool {.
    importc: "TLN_GetTilemapTile", header: "Tilengine.h".}
proc TLN_SetTilemapTile*(tilemap: TLN_Tilemap; row: cint; col: cint; tile: TLN_Tile): bool {.
    importc: "TLN_SetTilemapTile", header: "Tilengine.h".}
proc TLN_CopyTiles*(src: TLN_Tilemap; srcrow: cint; srccol: cint; rows: cint; cols: cint;
                   dst: TLN_Tilemap; dstrow: cint; dstcol: cint): bool {.
    importc: "TLN_CopyTiles", header: "Tilengine.h".}
proc TLN_DeleteTilemap*(tilemap: TLN_Tilemap): bool {.importc: "TLN_DeleteTilemap",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup palette
##  \brief Color palette resources management for sprites and background layers
##  @{

proc TLN_CreatePalette*(entries: cint): TLN_Palette {.importc: "TLN_CreatePalette",
    header: "Tilengine.h".}
proc TLN_LoadPalette*(filename: cstring): TLN_Palette {.importc: "TLN_LoadPalette",
    header: "Tilengine.h".}
proc TLN_ClonePalette*(src: TLN_Palette): TLN_Palette {.importc: "TLN_ClonePalette",
    header: "Tilengine.h".}
proc TLN_SetPaletteColor*(palette: TLN_Palette; color: cint; r: uint8_t; g: uint8_t;
                         b: uint8_t): bool {.importc: "TLN_SetPaletteColor",
    header: "Tilengine.h".}
proc TLN_MixPalettes*(src1: TLN_Palette; src2: TLN_Palette; dst: TLN_Palette;
                     factor: uint8_t): bool {.importc: "TLN_MixPalettes",
    header: "Tilengine.h".}
proc TLN_AddPaletteColor*(palette: TLN_Palette; r: uint8_t; g: uint8_t; b: uint8_t;
                         start: uint8_t; num: uint8_t): bool {.
    importc: "TLN_AddPaletteColor", header: "Tilengine.h".}
proc TLN_SubPaletteColor*(palette: TLN_Palette; r: uint8_t; g: uint8_t; b: uint8_t;
                         start: uint8_t; num: uint8_t): bool {.
    importc: "TLN_SubPaletteColor", header: "Tilengine.h".}
proc TLN_ModPaletteColor*(palette: TLN_Palette; r: uint8_t; g: uint8_t; b: uint8_t;
                         start: uint8_t; num: uint8_t): bool {.
    importc: "TLN_ModPaletteColor", header: "Tilengine.h".}
proc TLN_GetPaletteData*(palette: TLN_Palette; index: cint): ptr uint8_t {.
    importc: "TLN_GetPaletteData", header: "Tilengine.h".}
proc TLN_DeletePalette*(palette: TLN_Palette): bool {.importc: "TLN_DeletePalette",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup bitmap
##  \brief Bitmap management
##  @{

proc TLN_CreateBitmap*(width: cint; height: cint; bpp: cint): TLN_Bitmap {.
    importc: "TLN_CreateBitmap", header: "Tilengine.h".}
proc TLN_LoadBitmap*(filename: cstring): TLN_Bitmap {.importc: "TLN_LoadBitmap",
    header: "Tilengine.h".}
proc TLN_CloneBitmap*(src: TLN_Bitmap): TLN_Bitmap {.importc: "TLN_CloneBitmap",
    header: "Tilengine.h".}
proc TLN_GetBitmapPtr*(bitmap: TLN_Bitmap; x: cint; y: cint): ptr uint8_t {.
    importc: "TLN_GetBitmapPtr", header: "Tilengine.h".}
proc TLN_GetBitmapWidth*(bitmap: TLN_Bitmap): cint {.importc: "TLN_GetBitmapWidth",
    header: "Tilengine.h".}
proc TLN_GetBitmapHeight*(bitmap: TLN_Bitmap): cint {.
    importc: "TLN_GetBitmapHeight", header: "Tilengine.h".}
proc TLN_GetBitmapDepth*(bitmap: TLN_Bitmap): cint {.importc: "TLN_GetBitmapDepth",
    header: "Tilengine.h".}
proc TLN_GetBitmapPitch*(bitmap: TLN_Bitmap): cint {.importc: "TLN_GetBitmapPitch",
    header: "Tilengine.h".}
proc TLN_GetBitmapPalette*(bitmap: TLN_Bitmap): TLN_Palette {.
    importc: "TLN_GetBitmapPalette", header: "Tilengine.h".}
proc TLN_SetBitmapPalette*(bitmap: TLN_Bitmap; palette: TLN_Palette): bool {.
    importc: "TLN_SetBitmapPalette", header: "Tilengine.h".}
proc TLN_DeleteBitmap*(bitmap: TLN_Bitmap): bool {.importc: "TLN_DeleteBitmap",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup objects
##  \brief ObjectList resources management
##  @{

proc TLN_CreateObjectList*(): TLN_ObjectList {.importc: "TLN_CreateObjectList",
    header: "Tilengine.h".}
proc TLN_AddTileObjectToList*(list: TLN_ObjectList; id: uint16_t; gid: uint16_t;
                             flags: uint16_t; x: cint; y: cint): bool {.
    importc: "TLN_AddTileObjectToList", header: "Tilengine.h".}
proc TLN_LoadObjectList*(filename: cstring; layername: cstring): TLN_ObjectList {.
    importc: "TLN_LoadObjectList", header: "Tilengine.h".}
proc TLN_CloneObjectList*(src: TLN_ObjectList): TLN_ObjectList {.
    importc: "TLN_CloneObjectList", header: "Tilengine.h".}
proc TLN_GetListNumObjects*(list: TLN_ObjectList): cint {.
    importc: "TLN_GetListNumObjects", header: "Tilengine.h".}
proc TLN_GetListObject*(list: TLN_ObjectList; info: ptr TLN_ObjectInfo): bool {.
    importc: "TLN_GetListObject", header: "Tilengine.h".}
proc TLN_DeleteObjectList*(list: TLN_ObjectList): bool {.
    importc: "TLN_DeleteObjectList", header: "Tilengine.h".}
## *@}
## *
##  \defgroup layer
##  \brief Background layers management
##  @{

proc TLN_SetLayer*(nlayer: cint; tileset: TLN_Tileset; tilemap: TLN_Tilemap): bool {.
    importc: "TLN_SetLayer", header: "Tilengine.h".}
proc TLN_SetLayerTilemap*(nlayer: cint; tilemap: TLN_Tilemap): bool {.
    importc: "TLN_SetLayerTilemap", header: "Tilengine.h".}
proc TLN_SetLayerBitmap*(nlayer: cint; bitmap: TLN_Bitmap): bool {.
    importc: "TLN_SetLayerBitmap", header: "Tilengine.h".}
proc TLN_SetLayerPalette*(nlayer: cint; palette: TLN_Palette): bool {.
    importc: "TLN_SetLayerPalette", header: "Tilengine.h".}
proc TLN_SetLayerPosition*(nlayer: cint; hstart: cint; vstart: cint): bool {.
    importc: "TLN_SetLayerPosition", header: "Tilengine.h".}
proc TLN_SetLayerScaling*(nlayer: cint; xfactor: cfloat; yfactor: cfloat): bool {.
    importc: "TLN_SetLayerScaling", header: "Tilengine.h".}
proc TLN_SetLayerAffineTransform*(nlayer: cint; affine: ptr TLN_Affine): bool {.
    importc: "TLN_SetLayerAffineTransform", header: "Tilengine.h".}
proc TLN_SetLayerTransform*(layer: cint; angle: cfloat; dx: cfloat; dy: cfloat;
                           sx: cfloat; sy: cfloat): bool {.
    importc: "TLN_SetLayerTransform", header: "Tilengine.h".}
proc TLN_SetLayerPixelMapping*(nlayer: cint; table: ptr TLN_PixelMap): bool {.
    importc: "TLN_SetLayerPixelMapping", header: "Tilengine.h".}
proc TLN_SetLayerBlendMode*(nlayer: cint; mode: TLN_Blend; factor: uint8_t): bool {.
    importc: "TLN_SetLayerBlendMode", header: "Tilengine.h".}
proc TLN_SetLayerColumnOffset*(nlayer: cint; offset: ptr cint): bool {.
    importc: "TLN_SetLayerColumnOffset", header: "Tilengine.h".}
proc TLN_SetLayerClip*(nlayer: cint; x1: cint; y1: cint; x2: cint; y2: cint): bool {.
    importc: "TLN_SetLayerClip", header: "Tilengine.h".}
proc TLN_DisableLayerClip*(nlayer: cint): bool {.importc: "TLN_DisableLayerClip",
    header: "Tilengine.h".}
proc TLN_SetLayerMosaic*(nlayer: cint; width: cint; height: cint): bool {.
    importc: "TLN_SetLayerMosaic", header: "Tilengine.h".}
proc TLN_DisableLayerMosaic*(nlayer: cint): bool {.
    importc: "TLN_DisableLayerMosaic", header: "Tilengine.h".}
proc TLN_ResetLayerMode*(nlayer: cint): bool {.importc: "TLN_ResetLayerMode",
    header: "Tilengine.h".}
proc TLN_SetLayerObjects*(nlayer: cint; objects: TLN_ObjectList; tileset: TLN_Tileset): bool {.
    importc: "TLN_SetLayerObjects", header: "Tilengine.h".}
proc TLN_SetLayerPriority*(nlayer: cint; enable: bool): bool {.
    importc: "TLN_SetLayerPriority", header: "Tilengine.h".}
proc TLN_SetLayerParent*(nlayer: cint; parent: cint): bool {.
    importc: "TLN_SetLayerParent", header: "Tilengine.h".}
proc TLN_DisableLayerParent*(nlayer: cint): bool {.
    importc: "TLN_DisableLayerParent", header: "Tilengine.h".}
proc TLN_DisableLayer*(nlayer: cint): bool {.importc: "TLN_DisableLayer",
    header: "Tilengine.h".}
proc TLN_EnableLayer*(nlayer: cint): bool {.importc: "TLN_EnableLayer",
                                        header: "Tilengine.h".}
proc TLN_GetLayerType*(nlayer: cint): TLN_LayerType {.importc: "TLN_GetLayerType",
    header: "Tilengine.h".}
proc TLN_GetLayerPalette*(nlayer: cint): TLN_Palette {.
    importc: "TLN_GetLayerPalette", header: "Tilengine.h".}
proc TLN_GetLayerTileset*(nlayer: cint): TLN_Tileset {.
    importc: "TLN_GetLayerTileset", header: "Tilengine.h".}
proc TLN_GetLayerTilemap*(nlayer: cint): TLN_Tilemap {.
    importc: "TLN_GetLayerTilemap", header: "Tilengine.h".}
proc TLN_GetLayerBitmap*(nlayer: cint): TLN_Bitmap {.importc: "TLN_GetLayerBitmap",
    header: "Tilengine.h".}
proc TLN_GetLayerObjects*(nlayer: cint): TLN_ObjectList {.
    importc: "TLN_GetLayerObjects", header: "Tilengine.h".}
proc TLN_GetLayerTile*(nlayer: cint; x: cint; y: cint; info: ptr TLN_TileInfo): bool {.
    importc: "TLN_GetLayerTile", header: "Tilengine.h".}
proc TLN_GetLayerWidth*(nlayer: cint): cint {.importc: "TLN_GetLayerWidth",
    header: "Tilengine.h".}
proc TLN_GetLayerHeight*(nlayer: cint): cint {.importc: "TLN_GetLayerHeight",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup sprite
##  \brief Sprites management
##  @{

proc TLN_ConfigSprite*(nsprite: cint; spriteset: TLN_Spriteset; flags: uint32_t): bool {.
    importc: "TLN_ConfigSprite", header: "Tilengine.h".}
proc TLN_SetSpriteSet*(nsprite: cint; spriteset: TLN_Spriteset): bool {.
    importc: "TLN_SetSpriteSet", header: "Tilengine.h".}
proc TLN_SetSpriteFlags*(nsprite: cint; flags: uint32_t): bool {.
    importc: "TLN_SetSpriteFlags", header: "Tilengine.h".}
proc TLN_EnableSpriteFlag*(nsprite: cint; flag: uint32_t; enable: bool): bool {.
    importc: "TLN_EnableSpriteFlag", header: "Tilengine.h".}
proc TLN_SetSpritePivot*(nsprite: cint; px: cfloat; py: cfloat): bool {.
    importc: "TLN_SetSpritePivot", header: "Tilengine.h".}
proc TLN_SetSpritePosition*(nsprite: cint; x: cint; y: cint): bool {.
    importc: "TLN_SetSpritePosition", header: "Tilengine.h".}
proc TLN_SetSpritePicture*(nsprite: cint; entry: cint): bool {.
    importc: "TLN_SetSpritePicture", header: "Tilengine.h".}
proc TLN_SetSpritePalette*(nsprite: cint; palette: TLN_Palette): bool {.
    importc: "TLN_SetSpritePalette", header: "Tilengine.h".}
proc TLN_SetSpriteBlendMode*(nsprite: cint; mode: TLN_Blend; factor: uint8_t): bool {.
    importc: "TLN_SetSpriteBlendMode", header: "Tilengine.h".}
proc TLN_SetSpriteScaling*(nsprite: cint; sx: cfloat; sy: cfloat): bool {.
    importc: "TLN_SetSpriteScaling", header: "Tilengine.h".}
proc TLN_ResetSpriteScaling*(nsprite: cint): bool {.
    importc: "TLN_ResetSpriteScaling", header: "Tilengine.h".}
## TLNAPI bool TLN_SetSpriteRotation (int nsprite, float angle);
## TLNAPI bool TLN_ResetSpriteRotation (int nsprite);
